tests/suite/pass/generated/borrow/mut_borrow_read_only.ny
fn main() {
    let mut v = 1
    let r = &mut v
    print(*r)
    print(v)
}
