tests/suite/fail/generated/stderr_full/stderr_mut_borrow.ny
fn main() {
    let mut v = 0
    let r = &v
    v = 1
    print(r)
}
